appId: com.m1ku.turn
name: Settings
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: Listen
    timeout: 60000
- waitForAnimationToEnd
- scrollUntilVisible:
    element: Settings
- tapOn: Settings
- scrollUntilVisible:
    element: Your words
    direction: DOWN
    speed: 20
    visibilityPercentage: 50
- extendedWaitUntil:
    visible: Your words
    timeout: 10000
- waitForAnimationToEnd
- takeScreenshot: settings-top
- scrollUntilVisible:
    element: Erase all data
- takeScreenshot: settings-bottom
